--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -19,38 +19,50 @@
                 <p class="texto">
                     Clipboard allows you to track and organize everything you copy. Instantly access your clipboard on all your devices.
                 </p>
-                <div class="btn">
-                    Download for iOS
-                </div>
-                <div class="btn-mac">
-                    Download for Mac
+                <div class="conteudo-button">
+                    <div class="btn">
+                        Download for iOS
+                    </div>
+                    <div class="btn-mac ">
+                        Download for Mac
+                    </div>
                 </div>
             </article>
-            <article class="flex-content">
-                <h1 class="h1-keep">Keep track of your snippets</h1>
-                <p class="texto">
-                    Clipboard instantly stores any item you copy in the cloud, meaning you can access your snippets immediately on all your devices. Our Mac and iOS apps will help you organize everything.
-                </p>
+            <article class="flex-content ">
+                <div class="conteudo-keel">
+                    <h1 class="h1-keep">Keep track of your snippets</h1>
+                    <p class="texto">
+                        Clipboard instantly stores any item you copy in the cloud, meaning you can access your snippets immediately on all your devices. Our Mac and iOS apps will help you organize everything.
+                    </p>
+                </div>
+            </article>
+
+            <div class="monitor">
                 <img id="imagem-principal" src="./images/image-computer.png" alt="png">
-            </article>
-            <section class="flex-content altura-secao">
-                <h1>Quick Search</h1>
-                <p class="texto">Easily search your snippets by content, category, web address, application, and more.</p>
-            </section>
-            <section class="flex-content">
-                <h1>
-                    iCloud Sync
-                </h1>
-                <p class="texto">
-                    Instantly saves and syncs snippets across all your devices.
-                </p>
-            </section>
-            <section class="flex-content altura-secao">
-                <h1>Complete History </h1>
-                <p class="texto">
-                    Retrieve any snippets from the first moment you started using the app.
-                </p>
-            </section>
+                <div class="monitor-conteudo">
+                    <section class="flex-content altura-secao">
+                        <h1>Quick Search</h1>
+                        <p class="texto">Easily search your snippets by content, category, web address, application, and more.</p>
+                    </section>
+                    <section class="flex-content">
+                        <h1>
+                            iCloud Sync
+                        </h1>
+                        <p class="texto">
+                            Instantly saves and syncs snippets across all your devices.
+                        </p>
+                    </section>
+                    <section class="flex-content altura-secao">
+                        <h1>Complete History </h1>
+                        <p class="texto">
+                            Retrieve any snippets from the first moment you started using the app.
+                        </p>
+                    </section>
+                </div>
+
+            </div>
+
+
             <section class="flex-content altura-secao">
                 <h1>Access Clipboard anywhere </h1>
                 <p class="texto">
