--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <article class="flex-content content-imagem">
                 <img src="./images/logo.svg" class="logo-imagem" alt="svg">
                 <h1>A history of everything you copy</h1>
-                <p class="texto">
+                <p class="texto texto-historia">
                     Clipboard allows you to track and organize everything you copy. Instantly access your clipboard on all your devices.
                 </p>
                 <div class="conteudo-button">
@@ -28,7 +28,7 @@
                     </div>
                 </div>
             </article>
-            <article class="flex-content ">
+            <article class="flex-content">
                 <div class="conteudo-keel">
                     <h1 class="h1-keep">Keep track of your snippets</h1>
                     <p class="texto">
@@ -39,22 +39,24 @@
 
             <div class="monitor">
                 <img id="imagem-principal" src="./images/image-computer.png" alt="png">
-                <div class="monitor-conteudo">
-                    <section class="flex-content altura-secao">
+                <div class="monitor-conteudo texto-left">
+                    <section class="flex-content altura-secao texto-left">
                         <h1>Quick Search</h1>
-                        <p class="texto">Easily search your snippets by content, category, web address, application, and more.</p>
+                        <p class="texto texto-left">
+                            Easily search your snippets by content, category, web address, application, and more.
+                        </p>
                     </section>
-                    <section class="flex-content">
+                    <section class="flex-content altura-secao texto-left">
                         <h1>
                             iCloud Sync
                         </h1>
-                        <p class="texto">
+                        <p class="texto texto-left">
                             Instantly saves and syncs snippets across all your devices.
                         </p>
                     </section>
-                    <section class="flex-content altura-secao">
+                    <section class="flex-content altura-secao texto-left">
                         <h1>Complete History </h1>
-                        <p class="texto">
+                        <p class="texto texto-left">
                             Retrieve any snippets from the first moment you started using the app.
                         </p>
                     </section>
@@ -78,7 +80,7 @@
                     We’ve got the tools to boost your productivity.
                 </p>
             </section>
-            <section class="flex-content altura-secao ">
+            <section class="flex-content altura-secao">
                 <img id="icon-svg" src="./images/icon-blacklist.svg" alt="icon">
                 <h1>Create blacklists </h1>
                 <p class="texto">
