--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </article>
 
             <div class="monitor">
-                <img id="imagem-principal" src="./images/image-computer.png" alt="png">
+                <img class="imagem-principal" src="./images/image-computer.png" alt="png">
                 <div class="monitor-conteudo texto-left">
                     <section class="flex-content altura-secao texto-left">
                         <h1>Quick Search</h1>
@@ -66,11 +66,11 @@
 
 
             <section class="flex-content altura-secao">
-                <h1>Access Clipboard anywhere </h1>
-                <p class="texto">
+                <h1 class="h1-access">Access Clipboard anywhere </h1>
+                <p class="texto p-access">
                     Whether you’re on the go, or at your computer, you can access all your Clipboard snippets in a few simple clicks.
                 </p>
-                <img id="imagem-principal" src="./images/image-devices.png" alt="icon">
+                <img class="imagem-principal image-desktop" src="./images/image-devices.png" alt="icon">
             </section>
             <section class="flex-content altura-secao">
                 <h1>
