melhorias no readme

--- a/index.html
+++ b/index.html
@@ -150,6 +150,17 @@
                             6.162 0 100 12.324 6.162 6.162 0 000-12.324zM12 16a4 4 0 110-8 4 4 0 010 8zm6.406-11.845a1.44 1.44 0 100 2.881 1.44 1.44 0 000-2.881z " fill="currentColor" fill-rule=" nonzero "/>
                             </svg>
                     </div>
+                    <div id="company-media class=" rede-social ">
+                        <a href="# ">
+                            <ion-icon name="logo-facebook " size="large "></ion-icon>
+                        </a>
+                        <a href="# ">
+                            <ion-icon name="logo-twitter " size="large "></ion-icon>
+                        </a>
+                        <a href="# ">
+                            <ion-icon name="logo-instagram " size="large "></ion-icon>
+                        </a>
+                    </div>
                 </div>
             </section>
         </div>
