melhorias na pagina

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <main>
-        <div id="container-geral">
+        <div class="container-geral">
             <article class="flex-content content-imagem">
                 <img src="./images/logo.svg" class="logo-imagem" alt="svg">
                 <h1>A history of everything you copy</h1>
@@ -31,7 +31,7 @@
             <article class="flex-content">
                 <div class="conteudo-keel">
                     <h2 class="h2-keep">Keep track of your snippets</h2>
-                    <p class="texto">
+                    <p class="texto texto-keep">
                         Clipboard instantly stores any item you copy in the cloud, meaning you can access your snippets immediately on all your devices. Our Mac and iOS apps will help you organize everything.
                     </p>
                 </div>
@@ -63,7 +63,7 @@
                 </div>
             </div>
             <section class="flex-content altura-secao">
-                <h2 class="h3-access">Access Clipboard anywhere </h2>
+                <h2 class="h2-access">Access Clipboard anywhere </h2>
                 <p class="texto p-access">
                     Whether you’re on the go, or at your computer, you can access all your Clipboard snippets in a few simple clicks.
                 </p>
@@ -78,14 +78,14 @@
                 </p>
             </section>
             <div class="section-icon">
-                <section class="flex-content altura-secao">
+                <section class="flex-content altura-secao-icon altura-secao">
                     <img class="icon-svg" src="./images/icon-blacklist.svg" alt="icon">
                     <h3>Create blacklists </h3>
                     <p class="texto texto-icons">
                         Ensure sensitive information never makes its way to your clipboard by excluding certain sources.
                     </p>
                 </section>
-                <section class="flex-content altura-secao">
+                <section class="flex-content altura-secao-icon altura-secao">
                     <img class="icon-svg" src="./images/icon-text.svg" alt="icon">
                     <h3>
                         Plain text snippets
@@ -94,7 +94,7 @@
                         Remove unwanted formatting from copied text for a consistent look.
                     </p>
                 </section>
-                <section class="flex-content altura-secao">
+                <section class="flex-content altura-secao-icon altura-secao">
                     <img class="icon-svg" src="./images/icon-preview.svg" alt="icon">
                     <h3>
                         Sneak preview
