--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 <img src="./images/logo-hp.png" alt="hp">
                 <img src="./images/logo-vector-graphics.png" alt="vector">
             </div>
-            <section class="flex-content">
+            <section class="flex-content content-ios">
                 <h2>
                     Clipboard for iOS and Mac OS
                 </h2>
@@ -156,7 +156,6 @@
             </div>
         </div>
     </main>
-
 </body>
 
 </html>
